# arbitrage-bot

server/: .gitignore  Cargo.toml  README.md  build.bat  build.sh  deploy.sh
server/crates/exchanges/src/: lib.rs
server/crates/exchanges/src/binance/: asset.rs
server/crates/exchanges/src/bithumb/: asset.rs
server/crates/interface/: Cargo.toml
server/crates/interface/src/: lib.rs
server/crates/oracle/: Cargo.toml
server/crates/oracle/src/: collector.rs  lib.rs  main.rs  server.rs
server/crates/oracle/src/exchange/: binance.rs  bitget.rs  bithumb.rs  bybit.rs  mod.rs  okx.rs
server/crates/trade/: Cargo.toml
server/crates/trade/src/: lib.rs  main.rs
server/crates/trade/src/arbitrage/: binance_trader.rs  mod.rs  state.rs  strategy.rs
server/crates/trade/src/arbitrage/strategy/: cross_basis.rs  intra_basis.rs
server/crates/trade/src/emergency/: mod.rs
server/crates/trade/src/exchange/: mod.rs
server/crates/trade/src/exchange/bithumb/: asset.rs  fee.rs  mod.rs  orderbook.rs
server/crates/trade/src/explore/: mod.rs
server/crates/trade/src/record/: entities.rs  global.rs  helpers.rs  interfaces.rs  mod.rs  sqlite.rs
server/crates/trade/src/server/: mod.rs
server/crates/trade/src/trader/: binance.rs  bithumb.rs  mod.rs
server/src/: collector.rs  exchange_rate.rs  main.rs  model.rs
server/src/exchange/: binance.rs  bitget.rs  bithumb.rs  bybit.rs  mod.rs  okx.rs
trading-web/: vite.config.ts
trading-web/src/: App.tsx
web/src/: App.tsx
