[package]
name = "oracle"
version = "0.1.0"
edition = "2021"

[dependencies]
interface = { path = "../interface" }
tokio = { workspace = true }
reqwest = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
color-eyre = { workspace = true }
eyre = { workspace = true }
tokio-tungstenite = { workspace = true }

[[bin]]
name = "oracle"
path = "src/main.rs"

